refactor error codes, implement cached body request handling, and enhance logging filters